changed some parts to seperate components for easier maintainability

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,9 +30,13 @@ body {
 
 .nav-link {
   text-decoration: none;
+  border: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: transparent;
 }
 
-.nav-link active {
+.active {
   text-decoration: underline;
   color: yellow;
 }
